trying to fix some scaling on mobile

--- a/static/style.css
+++ b/static/style.css
@@ -149,5 +149,6 @@ code {
 
 .googleForm {
     width: 100%;
-    height: 775px;
+    height: 850px;
+    overflow: hidden;
 }
